# Image-processing

./: CMakeLists.txt  Convolution.cpp  Convolution.h  DecodeMessage.cpp  EdgeDetector.cpp  EdgeDetector.h  EncodeMessage.cpp  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageSharpening.cpp  ImageSharpening.h  main.cpp
